examples/rhdh-must-gather.output.k8s/helm/releases/ns=my-ns-2/my-backstage-1/hooks.yaml
---
# Source: backstage/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-backstage-1-developer-hub-test-connection"
  labels:
    app.kubernetes.io/name: developer-hub
    helm.sh/chart: backstage-4.5.8
    app.kubernetes.io/instance: my-backstage-1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: backstage
  annotations:
    helm.sh/hook: test
spec:
  containers:
    - name: curl
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop: ["ALL"]
      resources:
        requests:
          cpu: 10m
          memory: 20Mi
        limits:
          cpu: 10m
          memory: 20Mi
      livenessProbe:
        exec:
          command:
          - ls
          - /usr/bin/curl
      image: "quay.io/curl/curl:latest"
      imagePullPolicy: Always
      command: ["/bin/sh", "-c"]
      args:
        - |
          curl --connect-timeout 5 --max-time 20 --retry 20 --retry-delay 10 --retry-max-time 60 --retry-all-errors my-backstage-1-developer-hub:7007
  restartPolicy: Never
